# SDNorm

./: LICENSE  README.md  pyproject.toml
sdnorm/: evaluation.py  general_utils.py  sdnorm.py  streamline_utils.py
sdnorm/scripts/: create_density_template.py  run_evaluation.py  run_sdnorm.py  sdnorm_prune.py
test_data/sdnorm_outputs/: AF_L_sdnorm.trk  AF_L_sdnorm_2.trk  AF_L_sdnorm_indices.txt  AF_L_sdnorm_indices_2.txt  AF_L_sdnorm_report.json  AF_L_sdnorm_weights.txt
